--- a/2014/scss/base/_colors.scss
+++ b/2014/scss/base/_colors.scss
@@ -1,7 +1,14 @@
 $white: #fff;
 $black: #000;
+$gray: rgba($black, 0.6);
+$gray-light: rgba($black, 0.4);
+$gray-xlight: rgba($black, 0.2);
+
 $blue: #2da4cc;
+$blue-light: rgba($blue, 0.8);
+
 $red: #a00;
+$red-light: rgba($red, 0.8);
 $red-dark: #950000;
 
-$gray: rgba($black, 0.6);
+$light-brown: #ffc62a;
