--- a/2014/scss/base/_typography.scss
+++ b/2014/scss/base/_typography.scss
@@ -3,7 +3,7 @@ body {
 
 	@media screen and (max-width: 700px) { font-size: 14px;}
 }
-h1, h2, h3, h4, h5, h6, p, ul {
+h1, h2, h3, h4, h5, h6, p, ol, ul ,li {
 	margin: 0;
 	line-height: 1.5;
 	font-weight: 300;
@@ -23,7 +23,7 @@ h3 {
 	@media screen and (max-width: 900px){font-size: 16px;}
 }
 
-p {
+p, li {
 	font-size: 18px;
 	padding-bottom: 1.5em;
 }
