--- a/2014/css/application.css
+++ b/2014/css/application.css
@@ -1298,7 +1298,7 @@ nav ul li a, .page nav ul li a {
 /* line 28, ../scss/modules/_nav.scss */
 nav ul li a:hover, .page nav ul li a:hover {
   border-bottom: none;
-  color: #aa0000;
+  color: #2da4cc;
 }
 
 /* line 1, ../scss/pages/_tickets.scss */
