--- a/2014/scss/modules/_nav.scss
+++ b/2014/scss/modules/_nav.scss
@@ -25,7 +25,7 @@ nav, .page nav{
         padding: 0 10px;
         text-transform: lowercase;
 
-        &:hover{border-bottom: none; color: $red;}
+        &:hover{border-bottom: none; color: $blue;}
       }
       
     }
